Added new contact

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: CS 60050
 description: Course Page for CS 60050
-author: Pabitra Mitra
-email: pabitra@cse.iitlgp.ernet.in
+author: KGPML
+email: machinelearning.kgp@gmail.com
 baseurl: "/"
 url: "http://cs60050.github.io/"
 
